Fixed h1~h6 too close to top.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -86,6 +86,7 @@ hr {
 .content h1, h2, h3, h4, h5, h6 {
     font-weight: 600;
     color: #333333;
+	margin-top: 2rem;
     margin-bottom: 1rem;
 }
 
